--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite && cp _redirects dist/",
+    "build": "vite build && cp _redirects dist/",
     "preview": "vite preview"
   },
   "devDependencies": {
