--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
 "scripts": {
   "dev": "vite",
-  "build": "vite build --mode production && copy public\\signup.html dist\\ && copy public\\login.html dist\\",
+  "build": "vite build --mode production && node copy-files.js",
   "preview": "vite preview"
 },
   "devDependencies": {
